[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/hitspots/hit_spot/hit_spot.gd" type="Script" id=1]
[ext_resource path="res://scenes/hitspots/hit_spot/hit_spot_position.gd" type="Script" id=2]
[ext_resource path="res://scenes/hitspots/hit_spot/note_spawn_position.gd" type="Script" id=3]
[ext_resource path="res://assets/hit_spot.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/note_hit_sound_effect.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/note_miss.mp3" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=2]
radius = 24.0

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="CircleShape2D" id=4]
radius = 32.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 48 )

[sub_resource type="CircleShape2D" id=3]
radius = 24.0

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 75.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_random = 0.5
scale = 4.0

[node name="HitSpot" type="Node2D"]
self_modulate = Color( 1, 1, 1, 0.0235294 )
script = ExtResource( 1 )
input = "hitspot_1"
note_speed = 1.0

[node name="Pivot" type="Position2D" parent="."]

[node name="HitSpotPosition" type="Position2D" parent="Pivot"]
position = Vector2( 128, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="GoodArea" type="Area2D" parent="Pivot/HitSpotPosition"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/HitSpotPosition/GoodArea"]
shape = SubResource( 2 )

[node name="PerfectArea" type="Area2D" parent="Pivot/HitSpotPosition/GoodArea"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/HitSpotPosition/GoodArea/PerfectArea"]
shape = SubResource( 1 )

[node name="MissDetector" type="Area2D" parent="Pivot/HitSpotPosition"]
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/HitSpotPosition/MissDetector"]
shape = SubResource( 4 )

[node name="MissedNotesManager" type="Area2D" parent="Pivot/HitSpotPosition"]
position = Vector2( -80, 0 )
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/HitSpotPosition/MissedNotesManager"]
shape = SubResource( 5 )

[node name="NoteSpawnPosition" type="Position2D" parent="Pivot"]
position = Vector2( 512, 0 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="Pivot/NoteSpawnPosition"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/NoteSpawnPosition/Area2D"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Pivot"]
position = Vector2( 128, 0 )
texture = ExtResource( 4 )

[node name="Particles2D" type="Particles2D" parent="Pivot"]
self_modulate = Color( 1, 1, 1, 0.25098 )
position = Vector2( 128, 0 )
emitting = false
amount = 75
one_shot = true
speed_scale = 2.0
explosiveness = 0.85
randomness = 0.5
process_material = SubResource( 6 )

[node name="Tween" type="Tween" parent="."]

[node name="NoteSpawnCooldown" type="Timer" parent="."]
one_shot = true

[node name="NoteSpawnInterval" type="Timer" parent="."]
one_shot = true

[node name="InputCooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="NoteHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -2.0

[node name="NoteMissSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="area_entered" from="Pivot/HitSpotPosition/GoodArea" to="." method="_on_GoodArea_area_entered"]
[connection signal="area_exited" from="Pivot/HitSpotPosition/GoodArea" to="." method="_on_GoodArea_area_exited"]
[connection signal="area_entered" from="Pivot/HitSpotPosition/GoodArea/PerfectArea" to="." method="_on_PerfectArea_area_entered"]
[connection signal="area_exited" from="Pivot/HitSpotPosition/GoodArea/PerfectArea" to="." method="_on_PerfectArea_area_exited"]
[connection signal="area_entered" from="Pivot/HitSpotPosition/MissDetector" to="." method="_on_MissDetector_area_entered"]
[connection signal="area_exited" from="Pivot/HitSpotPosition/MissDetector" to="." method="_on_MissDetector_area_exited"]
[connection signal="area_entered" from="Pivot/HitSpotPosition/MissedNotesManager" to="." method="_on_MissedNotesManager_area_entered"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="NoteSpawnCooldown" to="." method="_on_NoteSpawnCooldown_timeout"]
[connection signal="timeout" from="NoteSpawnInterval" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="InputCooldown" to="." method="_on_InputCooldown_timeout"]
